# yali

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  config.example.json  docker-compose.it.yml  docker-compose.yml  gateway-planning-notes.md  prd
.github/workflows/: ci.yml  integration-tests-process.yml  integration-tests.yml
config/: control-plane.db  control-plane.example.toml  gateway.example.toml
docs/: README.md  adapters.md  architecture.md  configuration.md  load-balancing.md  policy-authoring.md  quickstart.md  resilience.md
gateway-cp/: Cargo.toml  Dockerfile
gateway-cp/src/: _legacy_api.rs  _legacy_db.rs  config.rs  lib.rs  main.rs
gateway-cp/src/api/: mod.rs  policies.rs  routes.rs
gateway-cp/src/db/: mod.rs  policies.rs  routes.rs
gateway-cp/src/grpc/: mod.rs
gateway-cp/src/model/: mod.rs
gateway-cp/src/service/: merge.rs  mod.rs  policies.rs  routes.rs  validation.rs
gateway-dp/: Cargo.toml  Dockerfile
gateway-dp/src/: app.rs  config.rs  lib.rs  logging.rs  main.rs  proxy.rs  router.rs  state.rs  sync.rs
gateway-dp/src/policy/: engine.rs  errors.rs  mod.rs  types.rs
gateway-dp/src/router/: matcher.rs  select.rs
gateway-it/: Cargo.toml  Dockerfile
gateway-it/features/: control_plane.feature  cp_dp.feature  policy_add_header.feature  policy_registration_validation.feature  route_matching.feature  route_policy_merge.feature  route_policy_validation.feature
gateway-it/tests/: cucumber.rs
gateway-proto/: Cargo.toml  build.rs
gateway-proto/proto/: gateway.proto
gateway-proto/src/: lib.rs
policies/add-header/: Cargo.toml  add-header.wasm
policies/add-header/src/: lib.rs
policy-runtime/: Cargo.toml
policy-runtime/src/: engine.rs  errors.rs  lib.rs  types.rs
policy-sdk/: Cargo.toml
policy-sdk/src/: lib.rs
policy-sdk/wit/: policy.wit
samples/configs/: mock-config.json  sample-config.json
samples/mocks/: mock-server.py
scripts/: build-policy-artifacts.sh  it-local.sh  upstream_echo.py
src/: lib.rs  main.rs  proxy.rs  state.rs
src/adapter/: anthropic.rs  azure.rs  bedrock.rs  google_ai.rs  mod.rs  openai.rs  traits.rs
src/config/: mod.rs
src/resilience/: circuit_breaker.rs  health_check.rs  load_balancer.rs  mod.rs  retry.rs
tests/: integration_test.rs
