[package]
name = "yali_gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "yali_gateway"
path = "src/lib.rs"

[dependencies]
pingora = { version = "0.6", features = ["lb"] }
pingora-core = "0.6"
pingora-proxy = "0.6"
pingora-http = "0.6"
pingora-load-balancing = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
matchit = "0.8"
bytes = "1"
http = "1"
once_cell = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
wiremock = "0.6"
tokio-test = "0.4"
serial_test = "3"

[[bin]]
name = "yali-gateway"
path = "src/main.rs"
