[package]
name = "gateway-cp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }

axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tonic = { version = "0.11", features = ["transport"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
futures-core = "0.3"
jsonschema = "0.18"

[dependencies.gateway-proto]
path = "../gateway-proto"
