[package]
name = "gateway-it"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
thiserror = { workspace = true }

[dev-dependencies]
cucumber = { version = "0.20", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
axum = "0.7"
tonic = { version = "0.11", features = ["transport"] }

[dependencies.gateway-cp]
path = "../gateway-cp"

[dev-dependencies.gateway-dp]
path = "../gateway-dp"

[dev-dependencies.gateway-proto]
path = "../gateway-proto"

[[test]]
name = "cucumber"
harness = false
