[package]
name = "gateway-it"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"

[dev-dependencies]
cucumber = { version = "0.20", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "cucumber"
harness = false
