[package]
name = "policy-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { version = "1", features = ["fs"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
url = "2"
wasmparser = "0.219"
wasmtime = { version = "41.0.3", features = ["component-model"] }
wasmtime-wasi = "41.0.3"
